// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel styled component extract based on props 1`] = `
"import './styled.test.emotion.css';
const H1 = styled('h1', ['css-H1-1kwokni'], [fontSize + 'px', props => props.translateX]);"
`;

exports[`babel styled component extract based on props 2`] = `
".css-H1-1kwokni { font-size: var(--css-H1-1kwokni-0);
        height: 20px;
        -webkit-transform: translateX(var(--css-H1-1kwokni-1));
        -ms-transform: translateX(var(--css-H1-1kwokni-1));
        transform: translateX(var(--css-H1-1kwokni-1)); }"
`;

exports[`babel styled component extract basic 1`] = `
"import './styled.test.emotion.css';
const H1 = styled('h1', ['css-H1-1mh2el5'], [fontSize + 'px']);"
`;

exports[`babel styled component extract basic 2`] = `".css-H1-1mh2el5 { font-size: var(--css-H1-1mh2el5-0); height: 20px }"`;

exports[`babel styled component extract composes 1`] = `
"import './styled.test.emotion.css';
const cls1 = \`\${'css-cls1-1ltut9y'}\`;
const H1 = styled('h1', ['css-H1-13ogl0z', cls1], [fontSize + 'px', props => props.translateX]);"
`;

exports[`babel styled component extract composes 2`] = `
".css-cls1-1ltut9y { width: 20px; }
.css-H1-13ogl0z {
        font-size: var(--css-H1-13ogl0z-0);
        height: 20px;
        -webkit-transform: translateX(var(--css-H1-13ogl0z-1));
        -ms-transform: translateX(var(--css-H1-13ogl0z-1));
        transform: translateX(var(--css-H1-13ogl0z-1)); }"
`;

exports[`babel styled component extract no dynamic 1`] = `
"import \\"./styled.test.emotion.css\\";
styled(\\"h1\\", [\\"css-14ksm7b\\"], []);"
`;

exports[`babel styled component extract no dynamic 2`] = `".css-14ksm7b { color: blue; }"`;

exports[`babel styled component extract no use 1`] = `"\\"h1\\";"`;

exports[`babel styled component inline attr 1`] = `
"styled('input', ['css-yj7w7r'], [props => props.height * props.scale, flex, function getMargin(props) {
       return props.margin;
}, function getWidth(props) {
       return props.width;
}], function createEmotionStyledRules(x0, x1, x2, x3) {
       return [\`.css-yj7w7r { margin: \${x2};
       color: #ffffff;
       height: \${x0};
       width: \${x3};
       color: blue;
       display: \${x1}; }\`];
});"
`;

exports[`babel styled component inline attr kitchen sink 1`] = `
"styled('input', ['css-y6q35k'], [alignItemsUnit, defaultValue, thing, function getMargin(props) {
        return (props.margin ? props.margin : '16') + 'px';
}, function getPadding(props) {
        return (props.padding ? props.padding : '16') + 'em';
}, function getFontSize(props) {
        return (props.fontSize ? props.fontSize : '8') + 'ch';
}, function getWidth(props) {
        return (props.width ? props.width : '95') + '%';
}, function getHeight(props) {
        return (props.height ? props.height : '90') + 'vw';
}, function getDisplay(props) {
        return (props.display ? props.display : 'flex') + '';
}, function getAlignItems(props) {
        return (props.alignItems ? props.alignItems : 'fallback') + alignItemsUnit;
}, function getThing(props) {
        return (props.thing ? props.thing : defaultValue) + 'px';
}, function getProp(props) {
        return props[thing] + 'px';
}], function createEmotionStyledRules(x0, x1, x2, x3, x4, x5, x6, x7, x8, x9, x10, x11) {
        return [\`.css-y6q35k { margin: \${x3};
        padding: \${x4};
        font-size: \${x5};
        width: \${x6};
        height: \${x7};
        display: \${x8};
        position: \${x9};
        position: \${x10};
        position: \${x11}; }\`];
});"
`;

exports[`babel styled component inline attr with default value 1`] = `
"styled('input', ['css-fj5c3o'], [function getMargin(props) {
        return (props.margin ? props.margin : '16') + '';
}], function createEmotionStyledRules(x0) {
        return [\`.css-fj5c3o { margin: \${x0}; }\`];
});"
`;

exports[`babel styled component inline attr with value type 1`] = `
"styled('input', ['css-3jy6co'], [function getMargin(props) {
        return props.margin + 'px';
}], function createEmotionStyledRules(x0) {
        return [\`.css-3jy6co { margin: \${x0}; }\`];
});"
`;

exports[`babel styled component inline attr with value type and default value 1`] = `
"styled('input', ['css-vb5gjx'], [function getMargin(props) {
        return (props.margin ? props.margin : '16') + 'px';
}], function createEmotionStyledRules(x0) {
        return [\`.css-vb5gjx { margin: \${x0}; }\`];
});"
`;

exports[`babel styled component inline basic 1`] = `
"const H1 = styled('h1', ['css-H1-1t8i2zo'], [fontSize + 'px'], function createEmotionStyledRules(x0) {
  return [\`.css-H1-1t8i2zo { font-size: \${x0}; }\`];
});"
`;

exports[`babel styled component inline function call 1`] = `
"styled(MyComponent, ['css-1t8i2zo'], [fontSize + 'px'], function createEmotionStyledRules(x0) {
  return [\`.css-1t8i2zo { font-size: \${x0}; }\`];
});"
`;

exports[`babel styled component inline lots of attrs with interpolated values 1`] = `
"styled('input', ['css-1kdt7pt'], [marginProp, marginProp, marginProp, marginProp, marginProp, marginProp, marginProp, marginProp, marginProp, marginProp, marginProp, marginProp, marginProp, marginProp, marginProp, marginProp, marginProp, displayProp, function getProp(props) {
       return props[marginProp];
}, function getProp(props) {
       return props[marginProp];
}, function getProp(props) {
       return props[marginProp];
}, function getProp(props) {
       return props[marginProp];
}, function getProp(props) {
       return props[marginProp];
}, function getProp(props) {
       return props[marginProp];
}, function getProp(props) {
       return props[marginProp];
}, function getProp(props) {
       return props[marginProp];
}, function getProp(props) {
       return props[marginProp];
}, function getProp(props) {
       return props[marginProp];
}, function getProp(props) {
       return props[marginProp];
}, function getProp(props) {
       return props[marginProp];
}, function getProp(props) {
       return props[marginProp];
}, function getProp(props) {
       return props[marginProp];
}, function getProp(props) {
       return props[marginProp];
}, function getProp(props) {
       return props[marginProp];
}, function getProp(props) {
       return props[marginProp];
}, function getProp(props) {
       return props[displayProp];
}], function createEmotionStyledRules(x0, x1, x2, x3, x4, x5, x6, x7, x8, x9, x10, x11, x12, x13, x14, x15, x16, x17, x18, x19, x20, x21, x22, x23, x24, x25, x26, x27, x28, x29, x30, x31, x32, x33, x34, x35) {
       return [\`.css-1kdt7pt { margin: \${x18};
       margin: \${x19};
       margin: \${x20};
       margin: \${x21};
       margin: \${x22};
       margin: \${x23};
       margin: \${x24};
       margin: \${x25};
       margin: \${x26};
       margin: \${x27};
       margin: \${x28};
       margin: \${x29};
       margin: \${x30};
       margin: \${x31};
       margin: \${x32};
       margin: \${x33};
       margin: \${x34};
       display: \${x35}; }\`];
});"
`;

exports[`babel styled component inline match works on multiple 1`] = `
"styled('input', ['css-1vvfgof'], [function getMargin(props) {
        return (props.margin ? props.margin : '16') + 'px';
}, function getPadding(props) {
        return (props.padding ? props.padding : '16') + 'em';
}], function createEmotionStyledRules(x0, x1) {
        return [\`.css-1vvfgof { margin: \${x0};
        color: blue;
        padding: \${x1}; }\`];
});"
`;

exports[`babel styled component inline name is correct with no identifier 1`] = `
"
css([\\"css-1cppx8p\\"], [], function createEmotionRules() {
        return [\`.css-1cppx8p { margin: 12px 48px;
        color: #ffffff; }\`];
});"
`;

exports[`babel styled component inline no dynamic 1`] = `
"styled(\\"h1\\", [\\"css-14ksm7b\\"], [], function createEmotionStyledRules() {
  return [\`.css-14ksm7b { color: blue; }\`];
});"
`;

exports[`babel styled component inline no use 1`] = `"\\"h1\\";"`;

exports[`babel styled component inline object composes with classes 1`] = `
"
const H1 = styled('h1', ['some-class', props => ({
  display: props.display
})], []);"
`;

exports[`babel styled component inline objects based on props 1`] = `
"
const H1 = styled('h1', [{
  padding: '10px'
}, props => ({
  display: props.display
})], []);"
`;

exports[`babel styled component inline objects fn call 1`] = `
"
const H1 = styled('h1', [{
  display: ['-webkit-box', '-ms-flexbox', 'flex']
}], []);"
`;

exports[`babel styled component inline objects prefixed 1`] = `
"
const H1 = styled('h1', [{
  borderRadius: '50%',
  WebkitTransition: '-webkit-transform 400ms ease-in-out',
  transition: ['-webkit-transform 400ms ease-in-out', 'transform 400ms ease-in-out', 'transform 400ms ease-in-out, -webkit-transform 400ms ease-in-out'],
  WebkitBoxSizing: 'border-box',
  boxSizing: 'border-box',
  display: ['-webkit-box', '-ms-flexbox', 'flex'],
  ':hover': {
    WebkitTransform: 'scale(1.2)',
    transform: 'scale(1.2)'
  }
}, props => {
  padding: props.padding;
}], []);"
`;

exports[`babel styled component inline styled component as selector 1`] = `
"
const SomeComponent = styled(\\"div\\", [\\"css-SomeComponent-1rk3iho\\"], []);
styled(\\"h1\\", [\\"css-byjn67\\"], [SomeComponent], function createEmotionStyledRules(x0) {
  return [\`.css-byjn67 { color: blue; }\`, \`.css-byjn67 \${x0} { color: green; }\`];
});"
`;

exports[`babel styled component inline styled. objects 1`] = `
"
const H1 = styled(\\"h1\\", [{
  padding: \\"10px\\"
}, props => ({
  display: props.display
})], []);"
`;

exports[`babel styled component inline styled. objects prefixed 1`] = `
"
const H1 = styled('h1', [{
  borderRadius: '50%',
  WebkitTransition: '-webkit-transform 400ms ease-in-out',
  transition: ['-webkit-transform 400ms ease-in-out', 'transform 400ms ease-in-out', 'transform 400ms ease-in-out, -webkit-transform 400ms ease-in-out'],
  WebkitBoxSizing: 'border-box',
  boxSizing: 'border-box',
  display: ['-webkit-box', '-ms-flexbox', 'flex'],
  ':hover': {
    WebkitTransform: 'scale(1.2)',
    transform: 'scale(1.2)'
  }
}, props => ({
  display: props.display
})], []);"
`;
